--- a/ShopInfo/Pages/TablePages/Users.razor
+++ b/ShopInfo/Pages/TablePages/Users.razor
@@ -8,23 +8,23 @@
 <h1 class="text-center">Users</h1>
 <hr />
 
-<div class="row my-3">
-    <div class="col "> 
+<div class="row my-3 mx-0 justify-content-start">
+    <div class="col-auto pe-1 ps-0">
         <input type="radio" class="btn-check" name="options-outlined" id="asc-outlined" autocomplete="off" checked @onchange="OnAscChange">
         <label class="btn btn-outline-primary" for="asc-outlined"><span class="oi oi-caret-top" aria-hidden="true"></span> Ascending</label>
     </div>
 
-    <div class="col ">
+    <div class="col-auto pe-1 ps-0">
         <input type="radio" class="btn-check" name="options-outlined" id="desc-outlined" autocomplete="off" @onchange="OnDescChange">
         <label class="btn btn-outline-primary" for="desc-outlined"><span class="oi oi-caret-bottom" aria-hidden="true"></span> Descending</label>
     </div>
 
-    <div class="col ">
+    <div class="col-auto pe-1 ps-0">
         <input type="number" class="h-100 rounded border-1 p-1 ps-2" placeholder="Enter row count" aria-label="Count" @onchange="OnCountChange">
     </div>
 </div>
 
-<table class="table border-3">
+<table class="table p-0">
     <thead>
         <tr class="bg-primary text-white">
             <th>Id</th>
@@ -35,6 +35,7 @@
             <th>Phone</th>
             <th>Email</th>
             <th>Password</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -49,35 +50,140 @@
                 <td>@user.Phone</td>
                 <td>@user.Email</td>
                 <td>@user.Password</td>
+                <td>
+                    <button type="button" class="btn btn-danger btn-sm" @onclick="@(async () => await DeleteUser(user.Id))"><span class="oi oi-x" aria-hidden="true"></span></button>
+                    <button type="button" class="btn btn-warning btn-sm" @onclick="@ShowModalEdit"><span class="oi oi-pencil" aria-hidden="true"></span></button>
+                </td>
             </tr>
         }
     </tbody>
 </table>
 
+<div class="container d-flex justify-content-center mb-3">
+    <button class="btn btn-success w-25" @onclick="ShowModalCreate">Add User</button>
+</div>
+
+<!-- Modal Create -->
+@if (showModalCreate)
+{
+    <div class="modal fade show d-block bg-white bg-opacity-50">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title ms-2">Add User</h2>
+                    <button type="button" class="btn-close" @onclick="HideModalCreate"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.FirstName" id="firstName" class="form-control form-control-lg" placeholder="First Name" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.MiddleName" id="middleName" class="form-control form-control-lg" placeholder="Middle Name" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.LastName" id="lastName" class="form-control form-control-lg" placeholder="Last Name" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="date" @bind="model.Birthdate" id="birthdate" class="form-control form-control-lg" placeholder="Birthdate" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="email" @bind="model.Email" id="email" class="form-control form-control-lg" placeholder="Email" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="tel" @bind="model.Phone" id="phone" class="form-control form-control-lg" placeholder="Phone" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.Password" id="password" class="form-control form-control-lg" placeholder="Password" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" @onclick="HideModalCreate">Close</button>
+                    <button type="button" class="btn btn-primary" @onclick="AddUser">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+<!-- Modal Edit -->
+@if (showModalCreate)
+{
+    <div class="modal fade show d-block bg-white bg-opacity-50">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title ms-2">Edit User</h2>
+                    <button type="button" class="btn-close" @onclick="HideModalEdit"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.Id" id="firstName" class="form-control form-control-lg" placeholder="First Name" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.FirstName" id="firstName" class="form-control form-control-lg" placeholder="First Name" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.MiddleName" id="middleName" class="form-control form-control-lg" placeholder="Middle Name" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.LastName" id="lastName" class="form-control form-control-lg" placeholder="Last Name" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="date" @bind="model.Birthdate" id="birthdate" class="form-control form-control-lg" placeholder="Birthdate" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="email" @bind="model.Email" id="email" class="form-control form-control-lg" placeholder="Email" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="tel" @bind="model.Phone" id="phone" class="form-control form-control-lg" placeholder="Phone" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.Password" id="password" class="form-control form-control-lg" placeholder="Password" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" @onclick="HideModalEdit">Close</button>
+                    <button type="button" class="btn btn-primary" @onclick="(async () => await EditUser(model.Id))">Edit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
 
 @code {
 
-    private bool isAsc = true;
-    private int n = 5;
+    //User list
+    private bool isAsc;
+    private int n;
     private List<User> users;
 
     private void OnAscChange(ChangeEventArgs args)
     {
-        if (args.Value.ToString() == "on")
-        {
-            isAsc = true;
-            js.InvokeVoidAsync("console.log", "true");
-            RefreshUsers();
-        }
+        isAsc = true;
+        RefreshUsers();
     }
+
     private void OnDescChange(ChangeEventArgs args)
     {
-        if (args.Value.ToString() == "on")
-        {
-            isAsc = false;
-            js.InvokeVoidAsync("console.log", "false");
-            RefreshUsers();
-        }
+        isAsc = false;
+        RefreshUsers();
     }
 
     private void OnCountChange(ChangeEventArgs args)
@@ -90,6 +196,83 @@
         }
     }
 
+    //Modal Add
+    private bool showModalCreate = false;
+
+    private void ShowModalCreate()
+    {
+        showModalCreate = true;
+    }
+
+    private void HideModalCreate()
+    {
+        showModalCreate = false;
+    }
+
+    //Logic Add
+    private class Model
+    {
+        public int Id { get; set; }
+        public string FirstName { get; set; }
+        public string LastName { get; set; }
+        public string MiddleName { get; set; }
+        public DateTime Birthdate { get; set; }
+        public string Email { get; set; }
+        public string Phone { get; set; }
+        public string Password { get; set; }
+    }
+
+    private Model model = new Model();
+
+    private async Task AddUser()
+    {
+        var usersController = new UsersController();
+        var result = usersController.UserRegister(new User
+            {
+                FirstName = model.FirstName,
+                LastName = model.LastName,
+                MiddleName = model.MiddleName,
+                Birthdate = model.Birthdate,
+                Email = model.Email,
+                Phone = model.Phone,
+                Password = model.Password,
+
+            });
+        RefreshUsers();
+        HideModalCreate();
+        model = new Model();
+    }
+
+    //Modal Edit
+    private bool showModalEdit = false;
+
+    private void ShowModalEdit()
+    {
+        showModalCreate = true;
+    }
+
+    private void HideModalEdit()
+    {
+        showModalCreate = false;
+    }
+
+    //Logic Edit
+    private async Task EditUser(int id)
+    {
+        RefreshUsers();
+        js.InvokeVoidAsync("console.log", $"Edit {id}");
+        model = new Model();
+    }
+
+    //Delete
+    private async Task DeleteUser(int id)
+    {
+        var usersController = new UsersController();
+        var result = usersController.DeleteUser(id);
+        RefreshUsers();
+    }
+
+    //Init and show list
     private void RefreshUsers()
     {
         var usersController = new UsersController();
@@ -99,6 +282,8 @@
 
     protected override async Task OnInitializedAsync()
     {
+        isAsc = true;
+        n = 5;
         RefreshUsers();
     }
 }
