--- a/ShopInfo/Pages/TablePages/Shops.razor
+++ b/ShopInfo/Pages/TablePages/Shops.razor
@@ -1,7 +1,299 @@
 ﻿@page "/shops"
+@using ShopInfo.Controllers
+@using ShopInfo.Models
+@inject IJSRuntime js
+@inject NavigationManager navManager
 <PageTitle>Shops</PageTitle>
-<h3>Shops</h3>
+
+<h1 class="text-center">Shops</h1>
+<hr />
+
+<div class="row my-3 mx-0 justify-content-start">
+    <div class="col-auto pe-1 ps-0">
+        <input type="radio" class="btn-check" name="options-outlined" id="asc-outlined" autocomplete="off" checked @onchange="OnAscChange">
+        <label class="btn btn-outline-primary" for="asc-outlined"><span class="oi oi-caret-top" aria-hidden="true"></span> Ascending</label>
+    </div>
+
+    <div class="col-auto pe-1 ps-0">
+        <input type="radio" class="btn-check" name="options-outlined" id="desc-outlined" autocomplete="off" @onchange="OnDescChange">
+        <label class="btn btn-outline-primary" for="desc-outlined"><span class="oi oi-caret-bottom" aria-hidden="true"></span> Descending</label>
+    </div>
+
+    <div class="col-auto pe-1 ps-0">
+        <input type="number" class="h-100 rounded border-1 p-1 ps-2" placeholder="Enter row count" aria-label="Count" @onchange="OnCountChange">
+    </div>
+</div>
+
+<table class="table p-0">
+    <thead>
+        <tr class="bg-primary text-white">
+            <th>Id</th>
+            <th>ShopName</th>
+            <th>City</th>
+            <th>Adress</th>
+            <th>Email</th>
+            <th>Phone</th>
+            <th>PostalCode</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var i in shops)
+        {
+            <tr class="bg-light">
+                <td>@i.Id</td>
+                <td>@i.ShopName</td>
+                <td>@i.City</td>
+                <td>@i.Adress</td>
+                <td>@i.Email</td>
+                <td>@i.Phone</td>
+                <td>@i.PostalCode</td>
+                <td>
+                    <button type="button" class="btn btn-warning btn-sm" @onclick="() => ShowModalEdit(i.Id)"><span class="oi oi-pencil" aria-hidden="true"></span></button>
+                    <button type="button" class="btn btn-danger btn-sm" @onclick="@(async () => await DeleteShop(i.Id))"><span class="oi oi-x" aria-hidden="true"></span></button>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<div class="container d-flex justify-content-center mb-3">
+    <button class="btn btn-success w-25" @onclick="ShowModalCreate">Add Shop</button>
+</div>
+
+<!-- Modal Create -->
+@if (showModalCreate)
+{
+    <div class="modal fade show d-block bg-white bg-opacity-50">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title ms-2">Add Shop</h2>
+                    <button type="button" class="btn-close" @onclick="HideModalCreate"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.ShopName" id="shopName" class="form-control form-control-lg" placeholder="Shop Name " />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.City" id="city" class="form-control form-control-lg" placeholder="City" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.Adress" id="adress" class="form-control form-control-lg" placeholder="Adress" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="email" @bind="model.Email" id="email" class="form-control form-control-lg" placeholder="Email" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="tel" @bind="model.Phone" id="phone" class="form-control form-control-lg" placeholder="Phone" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.PostalCode" id="postalCode" class="form-control form-control-lg" placeholder="Postal Code" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" @onclick="HideModalCreate">Close</button>
+                    <button type="button" class="btn btn-primary" @onclick="AddShop">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+<!-- Modal Edit -->
+@if (showModalEdit)
+{
+    <div class="modal fade show d-block bg-white bg-opacity-50">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title ms-2">Edit Shop</h2>
+                    <button type="button" class="btn-close" @onclick="HideModalEdit"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.Id" id="id" class="form-control form-control-lg" disabled />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.ShopName" id="shopName" class="form-control form-control-lg" placeholder="Shop Name " />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.City" id="city" class="form-control form-control-lg" placeholder="City" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.Adress" id="adress" class="form-control form-control-lg" placeholder="Adress" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="email" @bind="model.Email" id="email" class="form-control form-control-lg" placeholder="Email" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="tel" @bind="model.Phone" id="phone" class="form-control form-control-lg" placeholder="Phone" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.PostalCode" id="postalCode" class="form-control form-control-lg" placeholder="Postal Code" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" @onclick="HideModalEdit">Close</button>
+                    <button type="button" class="btn btn-primary" @onclick="(async () => await EditShop(model.Id))">Edit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
 
 @code {
 
+    //User list
+    private bool isAsc;
+    private int n;
+    private List<Shop> shops;
+
+    private void OnAscChange(ChangeEventArgs args)
+    {
+        isAsc = true;
+        RefreshTable();
+    }
+
+    private void OnDescChange(ChangeEventArgs args)
+    {
+        isAsc = false;
+        RefreshTable();
+    }
+
+    private void OnCountChange(ChangeEventArgs args)
+    {
+        var val = Convert.ToInt32(args.Value);
+        js.InvokeVoidAsync("console.log", $"Edit {val}");
+        if (val >= 0)
+        {
+            n = val;
+            RefreshTable();
+        }
+        else
+        {
+            n = 5;
+            RefreshTable();
+        }
+    }
+
+    // model
+
+    private class Model
+    {
+        public int Id { get; set; }
+        public string ShopName { get; set; }
+        public string City { get; set; }
+        public string Adress { get; set; }
+        public string Email { get; set; }
+        public string Phone { get; set; }
+        public string PostalCode { get; set; }
+    }
+
+    private Model model = new Model();
+
+    //Modal Add
+    private bool showModalCreate = false;
+
+    private void ShowModalCreate()
+    {
+        model = new Model();
+        showModalCreate = true;
+    }
+
+    private void HideModalCreate()
+    {
+        showModalCreate = false;
+        model = new Model();
+    }
+
+    //Logic Add
+
+    private async Task AddShop()
+    {
+        var shopsController = new ShopsController();
+        var result = shopsController.CreateShop(new Shop
+            {
+                ShopName = model.ShopName,
+                City = model.City,
+                Adress = model.Adress,
+                Email = model.Email,
+                Phone = model.Phone,
+                PostalCode = model.PostalCode,
+            });
+        RefreshTable();
+        HideModalCreate();
+    }
+
+    //Modal Edit
+    private bool showModalEdit = false;
+
+    private void ShowModalEdit(int id)
+    {
+        var shopsController = new ShopsController();
+        var result = shopsController.GetShop(id);
+        model = new Model()
+            {
+                Id = result.Id,
+                ShopName = result.ShopName,
+                City = result.City,
+                Adress = result.Adress,
+                Email = result.Email,
+                Phone = result.Phone,
+                PostalCode = result.PostalCode,
+            };
+        showModalEdit = true;
+    }
+
+    private void HideModalEdit()
+    {
+        showModalEdit = false;
+        model = new Model();
+    }
+
+    //Logic Edit
+    private async Task EditShop(int id)
+    {
+        var shopsController = new ShopsController();
+        var result = shopsController.EditShop(new Shop
+            {
+                Id = model.Id,
+                ShopName = model.ShopName,
+                City = model.City,
+                Adress = model.Adress,
+                Email = model.Email,
+                Phone = model.Phone,
+                PostalCode = model.PostalCode,
+            });
+        RefreshTable();
+        HideModalEdit();
+    }
+
+    //Delete
+    private async Task DeleteShop(int id)
+    {
+        var shopsController = new ShopsController();
+        var result = shopsController.DeleteShop(id);
+        RefreshTable();
+    }
+
+    //Init and show list
+    private void RefreshTable()
+    {
+        var shopsController = new ShopsController();
+        shops = shopsController.GetShops(n: n, isAsc: isAsc).ToList();
+        StateHasChanged();
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        isAsc = true;
+        n = 5;
+        RefreshTable();
+    }
 }
