--- a/ShopInfo/Pages/TablePages/Users.razor
+++ b/ShopInfo/Pages/TablePages/Users.razor
@@ -51,8 +51,8 @@
                 <td>@user.Email</td>
                 <td>@user.Password</td>
                 <td>
-                    <button type="button" class="btn btn-danger btn-sm" @onclick="@(async () => await DeleteUser(user.Id))"><span class="oi oi-x" aria-hidden="true"></span></button>
                     <button type="button" class="btn btn-warning btn-sm" @onclick="() => ShowModalEdit(user.Id)"><span class="oi oi-pencil" aria-hidden="true"></span></button>
+                    <button type="button" class="btn btn-danger btn-sm" @onclick="@(async () => await DeleteUser(user.Id))"><span class="oi oi-x" aria-hidden="true"></span></button>
                 </td>
             </tr>
         }
@@ -114,7 +114,7 @@
 }
 
 <!-- Modal Edit -->
-@if (showModalCreate)
+@if (showModalEdit)
 {
     <div class="modal fade show d-block bg-white bg-opacity-50">
         <div class="modal-dialog">
@@ -262,12 +262,12 @@
                 Phone = result.Phone,
                 Password = result.Password,
             };
-        showModalCreate = true;
+        showModalEdit = true;
     }
 
     private void HideModalEdit()
     {
-        showModalCreate = false;
+        showModalEdit = false;
         model = new Model();
     }
 
