--- a/ShopInfo/Pages/TablePages/Roles.razor
+++ b/ShopInfo/Pages/TablePages/Roles.razor
@@ -1,7 +1,265 @@
 ﻿@page "/roles"
+@using ShopInfo.Controllers
+@using ShopInfo.Models
+@inject IJSRuntime js
+@inject NavigationManager navManager
 <PageTitle>Roles</PageTitle>
-<h3>Roles</h3>
+
+<h1 class="text-center">Roles</h1>
+<hr />
+
+<div class="row my-3 mx-0 justify-content-start">
+    <div class="col-auto pe-1 ps-0">
+        <input type="radio" class="btn-check" name="options-outlined" id="asc-outlined" autocomplete="off" checked @onchange="OnAscChange">
+        <label class="btn btn-outline-primary" for="asc-outlined"><span class="oi oi-caret-top" aria-hidden="true"></span> Ascending</label>
+    </div>
+
+    <div class="col-auto pe-1 ps-0">
+        <input type="radio" class="btn-check" name="options-outlined" id="desc-outlined" autocomplete="off" @onchange="OnDescChange">
+        <label class="btn btn-outline-primary" for="desc-outlined"><span class="oi oi-caret-bottom" aria-hidden="true"></span> Descending</label>
+    </div>
+
+    <div class="col-auto pe-1 ps-0">
+        <input type="number" class="h-100 rounded border-1 p-1 ps-2" placeholder="Enter row count" aria-label="Count" @onchange="OnCountChange">
+    </div>
+</div>
+
+<table class="table p-0">
+    <thead>
+        <tr class="bg-primary text-white">
+            <th>Id</th>
+            <th>ShopId</th>
+            <th>RoleName</th>
+            <th>RoleDescription</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var i in roles)
+        {
+            <tr class="bg-light">
+                <td>@i.Id</td>
+                <td>@i.ShopId</td>
+                <td>@i.RoleName</td>
+                <td>@i.RoleDescription</td>
+                <td>
+                    <button type="button" class="btn btn-warning btn-sm" @onclick="() => ShowModalEdit(i.Id)"><span class="oi oi-pencil" aria-hidden="true"></span></button>
+                    <button type="button" class="btn btn-danger btn-sm" @onclick="@(async () => await DeleteRole(i.Id))"><span class="oi oi-x" aria-hidden="true"></span></button>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<div class="container d-flex justify-content-center mb-3">
+    <button class="btn btn-success w-25" @onclick="ShowModalCreate">Add Role</button>
+</div>
+
+<!-- Modal Create -->
+@if (showModalCreate)
+{
+    <div class="modal fade show d-block bg-white bg-opacity-50">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title ms-2">Add Role</h2>
+                    <button type="button" class="btn-close" @onclick="HideModalCreate"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-outline mb-4">
+                            <input type="number" @bind="model.ShopId" id="shopId" class="form-control form-control-lg" placeholder="Shop Id" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.RoleName" id="roleName" class="form-control form-control-lg" placeholder="Role Name" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.RoleDescription" id="roleDescription" class="form-control form-control-lg" placeholder="Role Description" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" @onclick="HideModalCreate">Close</button>
+                    <button type="button" class="btn btn-primary" @onclick="AddRole">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+<!-- Modal Edit -->
+@if (showModalEdit)
+{
+    <div class="modal fade show d-block bg-white bg-opacity-50">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title ms-2">Edit Role</h2>
+                    <button type="button" class="btn-close" @onclick="HideModalEdit"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.Id" id="id" class="form-control form-control-lg" disabled />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="number" @bind="model.ShopId" id="shopId" class="form-control form-control-lg" placeholder="Shop Id" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.RoleName" id="roleName" class="form-control form-control-lg" placeholder="Role Name" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.RoleDescription" id="roleDescription" class="form-control form-control-lg" placeholder="Role Description" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" @onclick="HideModalEdit">Close</button>
+                    <button type="button" class="btn btn-primary" @onclick="(async () => await EditRole(model.Id))">Edit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
 
 @code {
+
+    //User list
+    private bool isAsc;
+    private int n;
+    private List<Role> roles;
+
+    private void OnAscChange(ChangeEventArgs args)
+    {
+        isAsc = true;
+        RefreshTable();
+    }
+
+    private void OnDescChange(ChangeEventArgs args)
+    {
+        isAsc = false;
+        RefreshTable();
+    }
+
+    private void OnCountChange(ChangeEventArgs args)
+    {
+        var val = Convert.ToInt32(args.Value);
+        js.InvokeVoidAsync("console.log", $"Edit {val}");
+        if (val >= 0)
+        {
+            n = val;
+            RefreshTable();
+        }
+        else
+        {
+            n = 5;
+            RefreshTable();
+        }
+    }
+
+    // model
+
+    private class Model
+    {
+        public int Id { get; set; }
+        public int ShopId { get; set; }
+        public string RoleName { get; set; }
+        public string RoleDescription { get; set; }
+    }
+
+    private Model model = new Model();
+
+    //Modal Add
+    private bool showModalCreate = false;
+
+    private void ShowModalCreate()
+    {
+        model = new Model();
+        showModalCreate = true;
+    }
+
+    private void HideModalCreate()
+    {
+        showModalCreate = false;
+        model = new Model();
+    }
+
+    //Logic Add
+
+    private async Task AddRole()
+    {
+        var rolesController = new RolesController();
+        var result = rolesController.CreateRole(new Role
+            {
+                ShopId = model.ShopId,
+                RoleName = model.RoleName,
+                RoleDescription = model.RoleDescription,
+            });
+        RefreshTable();
+        HideModalCreate();
+    }
+
+    //Modal Edit
+    private bool showModalEdit = false;
+
+    private void ShowModalEdit(int id)
+    {
+        var rolesController = new RolesController();
+        var result = rolesController.GetRole(id);
+        model = new Model()
+            {
+                Id = result.Id,
+                ShopId = result.ShopId,
+                RoleName = result.RoleName,
+                RoleDescription = result.RoleDescription,
+            };
+        showModalEdit = true;
+    }
+
+    private void HideModalEdit()
+    {
+        showModalEdit = false;
+        model = new Model();
+    }
+
+    //Logic Edit
+    private async Task EditRole(int id)
+    {
+        var rolesController = new RolesController();
+        var result = rolesController.EditRole(new Role
+            {
+                Id = model.Id,
+                ShopId = model.ShopId,
+                RoleName = model.RoleName,
+                RoleDescription = model.RoleDescription,
+            });
+        RefreshTable();
+        HideModalEdit();
+    }
+
+    //Delete
+    private async Task DeleteRole(int id)
+    {
+        var rolesController = new RolesController();
+        var result = rolesController.DeleteRole(id);
+        RefreshTable();
+    }
+
+    //Init and show list
+    private void RefreshTable()
+    {
+        var rolesController = new RolesController();
+        roles = rolesController.GetRoles(n: n, isAsc: isAsc).ToList();
+        StateHasChanged();
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        isAsc = true;
+        n = 5;
+        RefreshTable();
+    }
+
 
 }
