Base page minimum added

--- a/ShopInfo/Pages/Index.razor
+++ b/ShopInfo/Pages/Index.razor
@@ -1,5 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Home</PageTitle>
 
-<h1>DB Visualisation</h1>
+
+<h1 class="text-center">Welcome to ShopInfo</h1>
+<hr />
