--- a/ShopInfo/Pages/TablePages/Categories.razor
+++ b/ShopInfo/Pages/TablePages/Categories.razor
@@ -8,7 +8,7 @@
 <h1 class="text-center">Categories</h1>
 <hr />
 
-@* <div class="row my-3 mx-0 justify-content-start">
+<div class="row my-3 mx-0 justify-content-start">
     <div class="col-auto pe-1 ps-0">
         <input type="radio" class="btn-check" name="options-outlined" id="asc-outlined" autocomplete="off" checked @onchange="OnAscChange">
         <label class="btn btn-outline-primary" for="asc-outlined"><span class="oi oi-caret-top" aria-hidden="true"></span> Ascending</label>
@@ -22,5 +22,258 @@
     <div class="col-auto pe-1 ps-0">
         <input type="number" class="h-100 rounded border-1 p-1 ps-2" placeholder="Enter row count" aria-label="Count" @onchange="OnCountChange">
     </div>
-</div> *@
+</div>
 
+<table class="table p-0">
+    <thead>
+        <tr class="bg-primary text-white">
+            <th>Id</th>
+            <th>MotherCategoryId</th>
+            <th>ShopId</th>
+            <th>CategoryName</th>
+            <th>CategoryDescription</th>
+
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var i in categories)
+        {
+            <tr class="bg-light">
+                <td>@i.Id</td>
+                <td>@i.MotherCategoryId</td>
+                <td>@i.ShopId</td>
+                <td>@i.CategoryName</td>
+                <td>@i.CategoryDescription</td>
+
+                <td>
+                    <button type="button" class="btn btn-warning btn-sm" @onclick="() => ShowModalEdit(i.Id)"><span class="oi oi-pencil" aria-hidden="true"></span></button>
+                    <button type="button" class="btn btn-danger btn-sm" @onclick="@(async () => await DeleteCategory(i.Id))"><span class="oi oi-x" aria-hidden="true"></span></button>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<div class="container d-flex justify-content-center mb-3">
+    <button class="btn btn-success w-25" @onclick="ShowModalCreate">Add Category</button>
+</div>
+
+<!-- Modal Create -->
+@if (showModalCreate)
+{
+    <div class="modal fade show d-block bg-white bg-opacity-50">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title ms-2">Add Category</h2>
+                    <button type="button" class="btn-close" @onclick="HideModalCreate"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-outline mb-4">
+                            <input type="number" @bind="model.MotherCategoryId" id="motherCategoryId" class="form-control form-control-lg" placeholder="Mother Category Id" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="number" @bind="model.ShopId" id="shopId" class="form-control form-control-lg" placeholder="Shop Id" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.CategoryName" id="categoryName" class="form-control form-control-lg" placeholder="Category Name" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.CategoryDescription" id="categoryDescription" class="form-control form-control-lg" placeholder="Category Description" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" @onclick="HideModalCreate">Close</button>
+                    <button type="button" class="btn btn-primary" @onclick="AddCategory">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+<!-- Modal Edit -->
+@if (showModalEdit)
+{
+    <div class="modal fade show d-block bg-white bg-opacity-50">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title ms-2">Edit Category</h2>
+                    <button type="button" class="btn-close" @onclick="HideModalEdit"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.Id" id="id" class="form-control form-control-lg" disabled />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="number" @bind="model.MotherCategoryId" id="motherCategoryId" class="form-control form-control-lg" placeholder="Mother Category Id" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="number" @bind="model.ShopId" id="shopId" class="form-control form-control-lg" placeholder="Shop Id" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.CategoryName" id="categoryName" class="form-control form-control-lg" placeholder="Category Name" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.CategoryDescription" id="categoryDescription" class="form-control form-control-lg" placeholder="Category Description" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" @onclick="HideModalEdit">Close</button>
+                    <button type="button" class="btn btn-primary" @onclick="(async () => await EditCategory(model.Id))">Edit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+@code {
+
+    //User list
+    private bool isAsc;
+    private int n;
+    private List<Category> categories;
+
+    private void OnAscChange(ChangeEventArgs args)
+    {
+        isAsc = true;
+        RefreshTable();
+    }
+
+    private void OnDescChange(ChangeEventArgs args)
+    {
+        isAsc = false;
+        RefreshTable();
+    }
+
+    private void OnCountChange(ChangeEventArgs args)
+    {
+        var val = Convert.ToInt32(args.Value);
+        js.InvokeVoidAsync("console.log", $"Edit {val}");
+        if (val >= 0)
+        {
+            n = val;
+            RefreshTable();
+        }
+        else
+        {
+            n = 5;
+            RefreshTable();
+        }
+    }
+
+    // model
+
+    private class Model
+    {
+        public int Id { get; set; }
+        public int? MotherCategoryId { get; set; }
+        public int ShopId { get; set; }
+        public string CategoryName { get; set; }
+        public string CategoryDescription { get; set; }
+    }
+
+    private Model model = new Model();
+
+    //Modal Add
+    private bool showModalCreate = false;
+
+    private void ShowModalCreate()
+    {
+        model = new Model();
+        showModalCreate = true;
+    }
+
+    private void HideModalCreate()
+    {
+        showModalCreate = false;
+        model = new Model();
+    }
+
+    //Logic Add
+
+    private async Task AddCategory()
+    {
+        var categoriesController = new CategoriesController();
+        var result = categoriesController.CreateCategory(new Category
+            {
+                MotherCategoryId = model.MotherCategoryId,
+                ShopId = model.ShopId,
+                CategoryName = model.CategoryName,
+                CategoryDescription = model.CategoryDescription,
+            });
+        RefreshTable();
+        HideModalCreate();
+    }
+
+    //Modal Edit
+    private bool showModalEdit = false;
+
+    private void ShowModalEdit(int id)
+    {
+        var categoriesController = new CategoriesController();
+        var result = categoriesController.GetCategory(id);
+        model = new Model()
+            {
+                Id = result.Id,
+                MotherCategoryId = result.MotherCategoryId,
+                ShopId = result.ShopId,
+                CategoryName = result.CategoryName,
+                CategoryDescription = result.CategoryDescription,
+            };
+        showModalEdit = true;
+    }
+
+    private void HideModalEdit()
+    {
+        showModalEdit = false;
+        model = new Model();
+    }
+
+    //Logic Edit
+    private async Task EditCategory(int id)
+    {
+        var categoriesController = new CategoriesController();
+        var result = categoriesController.EditCategory(new Category
+            {
+                Id = model.Id,
+                MotherCategoryId = model.MotherCategoryId,
+                ShopId = model.ShopId,
+                CategoryName = model.CategoryName,
+                CategoryDescription = model.CategoryDescription,
+            });
+        RefreshTable();
+        HideModalEdit();
+    }
+
+    //Delete
+    private async Task DeleteCategory(int id)
+    {
+        var categoriesController = new CategoriesController();
+        var result = categoriesController.DeleteCategory(id);
+        RefreshTable();
+    }
+
+    //Init and show list
+    private void RefreshTable()
+    {
+        var categoriesController = new CategoriesController();
+        categories = categoriesController.GetCategories(n: n, isAsc: isAsc).ToList();
+        StateHasChanged();
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        isAsc = true;
+        n = 5;
+        RefreshTable();
+    }
+
+
+}
