--- a/ShopInfo/Pages/TablePages/Purchases.razor
+++ b/ShopInfo/Pages/TablePages/Purchases.razor
@@ -8,7 +8,7 @@
 <h1 class="text-center">Purchases</h1>
 <hr />
 
-@* <div class="row my-3 mx-0 justify-content-start">
+<div class="row my-3 mx-0 justify-content-start">
     <div class="col-auto pe-1 ps-0">
         <input type="radio" class="btn-check" name="options-outlined" id="asc-outlined" autocomplete="off" checked @onchange="OnAscChange">
         <label class="btn btn-outline-primary" for="asc-outlined"><span class="oi oi-caret-top" aria-hidden="true"></span> Ascending</label>
@@ -22,5 +22,244 @@
     <div class="col-auto pe-1 ps-0">
         <input type="number" class="h-100 rounded border-1 p-1 ps-2" placeholder="Enter row count" aria-label="Count" @onchange="OnCountChange">
     </div>
-</div> *@
+</div>
+
+<table class="table p-0">
+    <thead>
+        <tr class="bg-primary text-white">
+            <th>Id</th>
+            <th>ProductId</th>
+            <th>UserId</th>
+            <th>PurchaseTime</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var i in purchases)
+        {
+            <tr class="bg-light">
+                <td>@i.Id</td>
+                <td>@i.ProductId</td>
+                <td>@i.UserId</td>
+                <td>@i.PurchaseTime</td>
+                <td>
+                    <button type="button" class="btn btn-warning btn-sm" @onclick="() => ShowModalEdit(i.Id)"><span class="oi oi-pencil" aria-hidden="true"></span></button>
+                    <button type="button" class="btn btn-danger btn-sm" @onclick="@(async () => await DeletePurchase(i.Id))"><span class="oi oi-x" aria-hidden="true"></span></button>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<div class="container d-flex justify-content-center mb-3">
+    <button class="btn btn-success w-25" @onclick="ShowModalCreate">Add Purchase</button>
+</div>
+
+<!-- Modal Create -->
+@if (showModalCreate)
+{
+    <div class="modal fade show d-block bg-white bg-opacity-50">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title ms-2">Add Purchase</h2>
+                    <button type="button" class="btn-close" @onclick="HideModalCreate"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-outline mb-4">
+                            <input type="number" @bind="model.ProductId" id="productId" class="form-control form-control-lg" placeholder="Product Id" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="number" @bind="model.UserId" id="userId" class="form-control form-control-lg" placeholder="User Id" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="datetime" @bind="model.PurchaseTime" id="purchaseTime" class="form-control form-control-lg" placeholder="Purchase Time" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" @onclick="HideModalCreate">Close</button>
+                    <button type="button" class="btn btn-primary" @onclick="AddPurchase">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+<!-- Modal Edit -->
+@if (showModalEdit)
+{
+    <div class="modal fade show d-block bg-white bg-opacity-50">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title ms-2">Edit Purchase</h2>
+                    <button type="button" class="btn-close" @onclick="HideModalEdit"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-outline mb-4">
+                            <input type="text" @bind="model.Id" id="id" class="form-control form-control-lg" disabled />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="number" @bind="model.ProductId" id="productId" class="form-control form-control-lg" placeholder="Product Id" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="number" @bind="model.UserId" id="userId" class="form-control form-control-lg" placeholder="User Id" />
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="date" @bind="model.PurchaseTime" id="purchaseTime" class="form-control form-control-lg" placeholder="Purchase Time" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" @onclick="HideModalEdit">Close</button>
+                    <button type="button" class="btn btn-primary" @onclick="(async () => await EditPurchase(model.Id))">Edit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+@code {
+
+    //User list
+    private bool isAsc;
+    private int n;
+    private List<Purchase> purchases;
+
+    private void OnAscChange(ChangeEventArgs args)
+    {
+        isAsc = true;
+        RefreshTable();
+    }
+
+    private void OnDescChange(ChangeEventArgs args)
+    {
+        isAsc = false;
+        RefreshTable();
+    }
+
+    private void OnCountChange(ChangeEventArgs args)
+    {
+        var val = Convert.ToInt32(args.Value);
+        js.InvokeVoidAsync("console.log", $"Edit {val}");
+        if (val >= 0)
+        {
+            n = val;
+            RefreshTable();
+        }
+        else
+        {
+            n = 5;
+            RefreshTable();
+        }
+    }
+
+    // model
+
+    private class Model
+    {
+        public int Id { get; set; }
+        public int ProductId { get; set; }
+        public int UserId { get; set; }
+        public DateTime PurchaseTime { get; set; }
+    }
+
+    private Model model = new Model();
+
+    //Modal Add
+    private bool showModalCreate = false;
+
+    private void ShowModalCreate()
+    {
+        model = new Model();
+        showModalCreate = true;
+    }
+
+    private void HideModalCreate()
+    {
+        showModalCreate = false;
+        model = new Model();
+    }
+
+    //Logic Add
+
+    private async Task AddPurchase()
+    {
+        var purchasesController = new PurchasesController();
+        var result = purchasesController.CreatePurchase(new Purchase
+            {
+                ProductId = model.ProductId,
+                UserId = model.UserId,
+                PurchaseTime = model.PurchaseTime,
+            });
+        RefreshTable();
+        HideModalCreate();
+    }
+    //Modal Edit
+    private bool showModalEdit = false;
+
+    private void ShowModalEdit(int id)
+    {
+        var purchasesController = new PurchasesController();
+        var result = purchasesController.GetPurchase(id);
+        model = new Model()
+            {
+                Id = result.Id,
+                ProductId = result.ProductId,
+                UserId = result.UserId,
+                PurchaseTime = result.PurchaseTime,
+            };
+        showModalEdit = true;
+    }
+
+    private void HideModalEdit()
+    {
+        showModalEdit = false;
+        model = new Model();
+    }
+
+    //Logic Edit
+    private async Task EditPurchase(int id)
+    {
+        var purchasesController = new PurchasesController();
+        var result = purchasesController.EditPurchase(new Purchase
+            {
+                Id = model.Id,
+                ProductId = model.ProductId,
+                UserId = model.UserId,
+                PurchaseTime = model.PurchaseTime,
+            });
+        RefreshTable();
+        HideModalEdit();
+    }
+
+    //Delete
+    private async Task DeletePurchase(int id)
+    {
+        var purchasesController = new PurchasesController();
+        var result = purchasesController.DeletePurchase(id);
+        RefreshTable();
+    }
+
+    //Init and show list
+    private void RefreshTable()
+    {
+        var purchasesController = new PurchasesController();
+        purchases = purchasesController.GetPurchases(n: n, isAsc: isAsc).ToList();
+        StateHasChanged();
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        isAsc = true;
+        n = 5;
+        RefreshTable();
+    }
+
+
+}
 
