--- a/ShopInfo/Pages/TablePages/Purchases.razor
+++ b/ShopInfo/Pages/TablePages/Purchases.razor
@@ -163,8 +163,8 @@
     private class Model
     {
         public int Id { get; set; }
-        public int ProductId { get; set; }
-        public int UserId { get; set; }
+        public int? ProductId { get; set; }
+        public int? UserId { get; set; }
         public DateTime PurchaseTime { get; set; }
     }
 
