--- a/ShopInfo/Pages/TablePages/Roles.razor
+++ b/ShopInfo/Pages/TablePages/Roles.razor
@@ -165,9 +165,9 @@
     private class Model
     {
         public int Id { get; set; }
-        public int ShopId { get; set; }
+        public int? ShopId { get; set; }
         public string RoleName { get; set; }
-        public string RoleDescription { get; set; }
+        public string? RoleDescription { get; set; }
     }
 
     private Model model = new Model();
