--- a/ShopInfo/Pages/TablePages/Employees.razor
+++ b/ShopInfo/Pages/TablePages/Employees.razor
@@ -179,8 +179,8 @@
     private class Model
     {
         public int Id { get; set; }
-        public int UserId { get; set; }
-        public int RoleId { get; set; }
+        public int? UserId { get; set; }
+        public int? RoleId { get; set; }
         public DateTime HireDate { get; set; }
         public bool IsOwner { get; set; }
     }
