Added tooltips for Ids

--- a/ShopInfo/Pages/TablePages/Categories.razor
+++ b/ShopInfo/Pages/TablePages/Categories.razor
@@ -42,7 +42,7 @@
             <tr class="bg-light">
                 <td>@i.Id</td>
                 <td>@i.MotherCategoryId</td>
-                <td>@i.ShopId</td>
+                <td title="@GetShopIdTooltip(i.ShopId)">@i.ShopId</td>
                 <td>@i.CategoryName</td>
                 <td>@i.CategoryDescription</td>
 
@@ -275,5 +275,24 @@
         RefreshTable();
     }
 
-
+    //Tooltips
+    private string GetShopIdTooltip(int? shopId)
+    {
+        if (shopId.HasValue)
+        {
+            var shopsController = new ShopsController();
+            var result = shopsController.GetShop(shopId.Value);
+            return
+            $@"
+            Id : {result.Id}
+            ShopName : {result.ShopName}
+            City : {result.City}
+            Adress : {result.Adress}
+            Email : {result.Email}
+            Phone : {result.Phone}
+            PostalCode : {result.PostalCode}
+            ";
+        }
+        return "";
+    }
 }
